[package]
name        = "ruse"
version     = "0.1.0"
authors     = ["Andrew Brinker <me@andrewbrinker.com>"]
description = "An embedded Scheme for Rust, like Lua for C."
homepage    = "https://github.com/ruse-lang/ruse"
repository  = "https://github.com/ruse-lang/ruse"
readme      = "README.md"
keywords    = ["language", "lisp"]
license     = "MIT/Apache-2.0"

[lib]
name = "ruse"
path = "src/lib.rs"

[dependencies]
read = { path = "../libread" }
eval = { path = "../libeval" }
print = { path = "../libprint" }

